Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2286

Test failure on test suite parallel-scale, subtest test_write_append_truncate

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • lustre master build # 1017 RHEL6 server and client
    • 3
    • 5470

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/35efafd0-2736-11e2-b04c-52540035b04c.

      The sub-test test_write_append_truncate failed with the following error:

      test failed to respond and timed out

      Client 1 dmesg:

      Lustre: DEBUG MARKER: == parallel-scale test write_append_truncate: write_append_truncate == 18:47:33 (1352083653)
      LustreError: 29318:0:(osc_cache.c:893:osc_extent_wait()) extent ffff880051c32480@{[256 -> 343/511], [2|0|+|cache|wiuY|ffff880058192c28], [360448|88|+|-|ffff8800581b3a58|256|(null)]} lustre-OST0000-osc-ffff880076700400: wait ext to 0 timedout, recovery in progress?
      
      write_append_ S 0000000000000000     0 29318  29314 0x00000080
       ffff8800206a37b8 0000000000000086 ffff8800206a37b8 ffffffff814fe75a
       0000002100000005 0000000000000286 0000000000000157 00000000000001ff
       ffff88003011c638 ffff8800206a3fd8 000000000000fb88 ffff88003011c638
      Call Trace:
       [<ffffffff814fe75a>] ? schedule_timeout+0x19a/0x2e0
       [<ffffffffa0a9e77e>] cfs_waitq_wait+0xe/0x10 [libcfs]
       [<ffffffffa0801e57>] osc_extent_wait+0x5f7/0x6c0 [osc]
       [<ffffffff81060250>] ? default_wake_function+0x0/0x20
       [<ffffffff8127a3ee>] ? number+0x2ee/0x320
       [<ffffffffa0804644>] osc_cache_truncate_start+0x1d84/0x2140 [osc]
       [<ffffffff81039678>] ? pvclock_clocksource_read+0x58/0xd0
       [<ffffffff8127cb36>] ? vsnprintf+0x2b6/0x5f0
       [<ffffffffa07f38cc>] osc_io_setattr_start+0x29c/0x4d0 [osc]
       [<ffffffffa055464b>] ? cl_lock_trace0+0x11b/0x130 [obdclass]
       [<ffffffffa055ae10>] ? cl_io_start+0x0/0x140 [obdclass]
       [<ffffffffa055ae7a>] cl_io_start+0x6a/0x140 [obdclass]
       [<ffffffffa088317e>] lov_io_call+0x8e/0x130 [lov]
       [<ffffffffa088646c>] lov_io_start+0x10c/0x190 [lov]
       [<ffffffffa055ae7a>] cl_io_start+0x6a/0x140 [obdclass]
       [<ffffffffa055f794>] cl_io_loop+0xb4/0x1b0 [obdclass]
       [<ffffffffa09a3f58>] cl_setattr_ost+0x208/0x2d0 [lustre]
       [<ffffffffa0973342>] ll_setattr_raw+0x752/0xfd0 [lustre]
       [<ffffffffa0973c1b>] ll_setattr+0x5b/0xf0 [lustre]
       [<ffffffff81197368>] notify_change+0x168/0x340
       [<ffffffff811799a4>] do_truncate+0x64/0xa0
       [<ffffffff8109c9b0>] ? getnstimeofday+0x60/0xf0
       [<ffffffff81187238>] ? get_write_access+0x28/0x60
       [<ffffffff81179b52>] sys_truncate+0x172/0x1a0
       [<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b
      

            jay Jinshan Xiong (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: