LU-2286 osc: unplug OSC queue at the end of truncate

It was missed somehow. Otherwise, this extent would never be flushed
until the next write to this file is coming. Even writepage() won't
help out this case.

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: I179269163e5ad5382448036046925a5747282472
Reviewed-on: http://review.whamcloud.com/4477
Tested-by: Hudson
Reviewed-by: Niu Yawei <niu@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>